infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tamv-identity-api
  namespace: tamv-prod
  labels:
    app: tamv-identity-api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tamv-identity-api
  template:
    metadata:
      labels:
        app: tamv-identity-api
    spec:
      containers:
        - name: api
          image: ghcr.io/osopanda1/tamv-digital-nexus/tamv-identity-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
