infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tamv-identity-api
  namespace: tamv-prod
spec:
  selector:
    app: tamv-identity-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
