infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tamv-identity-api
  namespace: tamv-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tamv.online
      secretName: tamv-identity-api-tls
  rules:
    - host: api.tamv.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tamv-identity-api
                port:
                  number: 80
